--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -24,7 +24,7 @@
         {% block extra_css %}{% endblock %}
     </head>
 
-    <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %}">
+    <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %} {% block header_class %}header-content-light{% endblock %}">
         {% block body_top %}{% endblock %}
 
         <div class="app__grid-lines" aria-hidden="true">
@@ -70,6 +70,7 @@
         </nav>
 
         <!-- <section class="header__menus header__menus--mobile" data-mobile-menu> </section> -->
+        <!--
         <div class="app__search">
             <form action="https://www.rca.ac.uk/search" method="get" role="search" class="form form--header-search">
                 <input class="input" type="text" placeholder="Search…" name="q"{% if search_query %} value="{{ search_query }}{% endif %}">
@@ -77,7 +78,7 @@
                     <svg class="icon icon--magnifying-glass"><use xlink:href="#magnifying-glass"></use></svg>
                 </button>
             </form>
-        </div>
+        </div>-->
 
         <main class="app__content">
             {% block content %}
