--- a/rca/project_styleguide/templates/patterns/organisms/header/header.html
+++ b/rca/project_styleguide/templates/patterns/organisms/header/header.html
@@ -1,4 +1,4 @@
-<div class="header bg bg--dark"> {# modifier needs to be set by BE #}
+<div class="header">
     <div class="header__container grid">
 
         <div class="header__logo">
