--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -2,21 +2,6 @@
     $root: &;
     display: block;
 
-    &__image {
-        width: 100%;
-        height: auto;
-    }
-
-    .app__navigation &,
-    .header & {
-        width: 130px;
-        height: auto;
-
-        @include media-query(medium) {
-            width: 162px;
-        }
-    }
-
     .footer & {
         width: 92px;
         height: auto;
@@ -30,16 +15,41 @@
         }
     }
 
+    .header-content-dark & {
+        #{$root}__image {
+            fill: $color--black;
+        }
+    }
+
     .app__navigation &,
-    .bg--dark & {
+    .header-content-light & {
         #{$root}__image {
             fill: $color--white;
         }
     }
 
-    .bg--light & {
+    .headroom--pinned .header &,
+    .headroom--pinned .app__navigation & {
+
         #{$root}__image {
-            fill: $color--black;
+            width: 92px;
+            height: auto;
+            fill: $color--white;
         }
+
+    }
+
+    .headroom--top .header &,
+    .headroom--top .app__navigation & {
+
+        #{$root}__image {
+            width: 130px;
+            height: auto;
+
+            @include media-query(medium) {
+                width: 162px;
+            }
+        }
+
     }
 }
