--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
     @include z-index(header);
+    $root: &;
     position: fixed;
     width: 100%;
     top: 0;
@@ -8,8 +9,12 @@
     &__container {
         max-width: $site-width;
         margin: 0 auto;
-        padding-top: ($gutter * 2);
+        padding-top: ($gutter * 1.5);
         padding-bottom: ($gutter);
+
+        @include media-query(medium) {
+            padding-top: ($gutter * 2);
+        }
     }
 
     &__navigation-toggle {
@@ -102,5 +107,27 @@
     // Show when scrolling back up
     .headroom--pinned & {
         transform: translate3d(0, 0, 0);
+        background-color: $color--black;
+
+        #{$root}__container {
+            padding-top: ($gutter);
+        }
+
+        #{$root}__search-toggle {
+            color: $color--white;
+        }
+    }
+
+    // Ensure no bg colour when at top
+    .headroom--top & {
+        background-color: transparent;
+
+        #{$root}__container {
+            padding-top: ($gutter * 1.5);
+
+            @include media-query(medium) {
+                padding-top: ($gutter * 2);
+            }
+        }
     }
 }
