--- a/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
+++ b/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
@@ -20,9 +20,8 @@
         <path d="M5 3.5C5 4.9 3.9 6 2.5 6S0 4.9 0 3.5 1.1 1 2.5 1 5 2.1 5 3.5zM5 8H0v16h5V8zm8 0H8v16h5v-8.4c0-4.7 6-5 6 0V24h5V13.9c0-8-9-7.6-11-3.7V8z"/>
     </symbol>
 
-    <symbol id="magnifying-glass" viewBox="0 0 24 23" fill="none">
-        <circle cx="9" cy="9" r="8" stroke="#fff" stroke-width="2" />
-        <path stroke="#fff" stroke-width="2" d="M17.707 17.293l5 5"/>
+    <symbol id="magnifying-glass" viewBox="0 0 24 24">
+        <path d="M9.4.7A9 9 0 0 0 .3 9.8a9 9 0 0 0 9.1 9.1 9 9 0 0 0 9.1-9.1c0-5-4.1-9.1-9.1-9.1zm0 16.4c-4 0-7.2-3.2-7.2-7.2s3.2-7.2 7.2-7.2 7.2 3.2 7.2 7.2-3.3 7.2-7.2 7.2zM17.4 18.9l1.4-1.5 5 5-1.4 1.5z"/>
     </symbol>
 
     <symbol id="arrow" viewBox="0 0 12 8">
