--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -14,23 +14,9 @@
         transform: rotate(-45deg) translate(0, 0);
     }
 
-    .bg--dark &,
-    .header-content-light & {
-        #{$root}__link {
-            color: $color--link-darkbg;
-
-            &:hover {
-                color: $color--link-darkbg-hover;
-            }
-        }
-
-        #{$root}__icon {
-            fill: $color--white;
-        }
-    }
 
     .bg--light &,
-    .header-content-dark & {
+    .header-content-dark .header & {
         #{$root}__link {
             color: $color--link-lightbg;
 
@@ -41,6 +27,22 @@
 
         #{$root}__icon {
             fill: $color--black;
+        }
+    }
+
+    .bg--dark &,
+    .header-content-light .header &,
+    .headroom--pinned.headroom--not-top .header & {
+        #{$root}__link {
+            color: $color--link-darkbg;
+
+            &:hover {
+                color: $color--link-darkbg-hover;
+            }
+        }
+
+        #{$root}__icon {
+            fill: $color--white;
         }
     }
 
