--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -2,6 +2,9 @@
 {% load wagtailcore_tags wagtailimages_tags static %}
 
 {% block content %}
+
+    {% include "patterns/molecules/hero/hero.html" with modifier="home" %}
+
     <h1>{{ page.title }}</h1>
 
     {{ page.strapline }}
