--- a/rca/static_src/sass/components/_burger.scss
+++ b/rca/static_src/sass/components/_burger.scss
@@ -26,23 +26,35 @@
         stroke: $color--white;
     }
 
-    .bg--dark & {
-        #{$root}__line {
-            background: $color--white;
+    .header-content-dark .header & {
+
+        #{$root}__toggle-icon {
+            stroke: $color--black;
         }
+
+    }
+
+    .header-content-light .header & {
+
+        #{$root}__toggle-icon {
+            stroke: $color--white;
+        }
+
+    }
+
+    .headroom--pinned.headroom--not-top & {
+
+        #{$root}__toggle-icon {
+            stroke: $color--white;
+        }
+
+    }
+
+    .app__navigation & {
 
         #{$root}__toggle-label {
             color: $color--white;
         }
-    }
 
-    .bg--light & {
-        #{$root}__line {
-            background: $color--black;
-        }
-
-        #{$root}__toggle-label {
-            color: $color--black;
-        }
     }
 }
