--- a/rca/static_src/sass/components/_search-toggle.scss
+++ b/rca/static_src/sass/components/_search-toggle.scss
@@ -22,7 +22,9 @@
         }
     }
 
-    .bg--dark & {
+    .header-content-light &,
+    .headroom--pinned.headroom--not-top &,
+    .app__navigation & {
         #{$root}__label {
             color: $color--white;
         }
@@ -32,7 +34,7 @@
         }
     }
 
-    .bg--light & {
+    .header-content-dark & {
         #{$root}__label {
             color: $color--black;
         }
@@ -41,4 +43,5 @@
             fill: $color--black;
         }
     }
+
 }
