--- a/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.html
+++ b/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.html
@@ -1,5 +1,5 @@
 <div class="staff-detail">
-    <img src="http://placekitten.com/277/277" class="staff-detail__image" alt="">
+    <img src="//placekitten.com/277/277" class="staff-detail__image" alt="">
     <h3 class="staff-detail__heading heading heading--five">Beth Hughes</h3>
     <h4 class="staff-detail__job-title body body--one">Head of Programmes</h4>
     <p class="staff-detail__body">Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.</p>
