--- a/rca/static_src/sass/components/_footer-link-item.scss
+++ b/rca/static_src/sass/components/_footer-link-item.scss
@@ -9,10 +9,12 @@
 
     &__link {
         @include font-size(xxs);
+        @include underline-hover();
+        position: relative;
         color: $color--link-darkbg;
 
         &:hover {
-            color: $color--link-darkbg-hover;
+            color: $color--link-darkbg;
         }
     }
 }
