--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -128,5 +128,9 @@
         #{$root}__menu-toggle {
             color: $color--white;
         }
+
+        #{$root}__navigation-toggle {
+            align-items: center;
+        }
     }
 }
