--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -27,6 +27,9 @@ $color--scrollbar-lightbg-bg: $color--black-24;
 $color--grid-line-light: $color--white-12;
 $color--grid-line-dark: $color--black-80;
 
+$color--grid-line-light: $color--white-12;
+$color--grid-line-dark: $color--black-80;
+
 // --------------------------------- Fonts --------------------------------------
 
 $font--primary: 'Benton Sans', 'BentonSans', 'Helvetica Neue', Arial, Helvetica,
