--- a/rca/project_styleguide/templates/patterns/molecules/navigation/footernav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/footernav.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags %}
 <nav class="grid grid--narrow" role="navigation" aria-label="Tertiary">
-    {% for footer in footernav %}
-        {% include_block footer %}
+    {% for value in footernav %}
+        {% include 'patterns/atoms/audience-nav-item/audience-nav-item.html' %}
     {% endfor %}
 </nav>
