--- a/rca/project_styleguide/templates/patterns/molecules/slide/slide.html
+++ b/rca/project_styleguide/templates/patterns/molecules/slide/slide.html
@@ -3,7 +3,7 @@
     {% image slide.image fill-829x585 class="slide__image" %}
     <div class="slide__meta">
         <h2 class="slide__heading">{{ slide.title }}</h2>
-        <div class="slide_author-info">
+        <div class="slide__author-info">
             {% if slide.link %}
                 <a class="slide__link" href="{{ slide.link }}">
             {% endif %}
