--- a/rca/static_src/sass/layout/_footer.scss
+++ b/rca/static_src/sass/layout/_footer.scss
@@ -86,6 +86,12 @@
     }
 
     &__credit-item {
+        max-width: 220px;
+
+        @include media-query(medium) {
+            max-width: none;
+        }
+
         &:first-child {
             padding-bottom: $gutter;
             border-bottom: 1px solid $color--grid-line-light;
