--- a/rca/static_src/sass/components/_breadcrumb.scss
+++ b/rca/static_src/sass/components/_breadcrumb.scss
@@ -20,6 +20,11 @@
         }
     }
 
+    &__item-link {
+        @include underline-hover();
+        position: relative;
+    }
+
     .bg--dark & {
         #{$root}__item-link {
             color: $color--white;
