--- a/rca/static_src/sass/base/_typography.scss
+++ b/rca/static_src/sass/base/_typography.scss
@@ -24,7 +24,7 @@ h4,
 h5,
 h6 {
     @include heading-text();
-    margin: 0 0 1rem;
+    margin: 0;
 }
 
 blockquote {
@@ -34,25 +34,11 @@ blockquote {
     text-transform: inherit;
 }
 
-h2 {
-    @include font-size(xl);
-}
-
-h3 {
-    @include font-size(l);
-}
-
-h4 {
-    @include font-size(m);
-    line-height: $line-height-large;
-}
-
-h5,
-h6 {
-    @include font-size(s);
-    line-height: $line-height-small;
-}
-
 small {
     @include font-size(xs);
+}
+
+p {
+    line-height: $line-height-small;
+    margin: 0 0 1rem;
 }
